created cpu random move with three possible moves. Created function that returns conditionals for each possible scenario. Function is for one round. Will start to work on loop to use function for 5 rounds total.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <form>
         <h2>Round 1</h2>
         <select id="form">
-            <option>Rock</option>
-            <option>Paper</option>
-            <option>Scissor</option>
+            <option id="rock">Rock</option>
+            <option id="paper">Paper</option>
+            <option id="scissor">Scissor</option>
         </select>
         Your selection: <p id="human-selection"></p>
     <br>
