created loop but don't yet know how it fits with my approach t making this application. I'm creating events that occur when human selects their option. I still have to do the same for the CPU's selection button, and I need to store both selections in variables to use in a function w/ a conditional to output the winner of the round.

--- a/index.html
+++ b/index.html
@@ -8,23 +8,22 @@
 
 <body>
     
-    Select your option.
-    <p>
-
-    </p>
-
+   
     <form>
         <h2>Round 1</h2>
         <select id="form">
-            <option id="rock">Rock</option>
-            <option id="paper">Paper</option>
-            <option id="scissor">Scissor</option>
+            <option>Select an option.</option>
+            <option id="rock" value="1">Rock</option>
+            <option id="paper" value="2">Paper</option>
+            <option id="scissor" value="3">Scissor</option>
         </select>
-        Your selection: <p id="human-selection"></p>
+        <p>Your selection: </p> 
+        <h4 id="human-selection"></h4>
     <br>
 
-    <input type="button"  onclick="" value="CPU's turn."></button>
-    CPU's selection: <p id="cpu-selection"></p>
+    <input type="button"  onclick="" value="Click for CPU's move."></button>
+    <p>CPU's selection: </p> 
+    <h4 id="cpu-selection"></h4>
     <br>
     </form>
 
