Created event for both human selection and cpu selection. The event is that a text appears on the page when selection is clicked.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <form>
         <h2>Round 1</h2>
         <select id="form">
-            <option>Select an option.</option>
+            <option id="none">Select an option.</option>
             <option id="rock" value="1">Rock</option>
             <option id="paper" value="2">Paper</option>
             <option id="scissor" value="3">Scissor</option>
@@ -21,7 +21,7 @@
         <h4 id="human-selection"></h4>
     <br>
 
-    <input type="button"  onclick="" value="Click for CPU's move."></button>
+    <input id="input" type="button" value="Click for CPU's move."></input>
     <p>CPU's selection: </p> 
     <h4 id="cpu-selection"></h4>
     <br>
