--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <form>
         <h2>Round 1</h2>
         <select id="form">
-            <option id="none">Select an option.</option>
-            <option id="rock" value="1">Rock</option>
-            <option id="paper" value="2">Paper</option>
-            <option id="scissor" value="3">Scissor</option>
+            <option value="1">Select an option.</option>
+            <option id="rock" value="2">Rock</option>
+            <option id="paper" value="3">Paper</option>
+            <option id="scissor" value="4">Scissor</option>
         </select>
         <p>Your selection: </p> 
         <h4 id="human-selection"></h4>
@@ -26,6 +26,8 @@
     <h4 id="cpu-selection"></h4>
     <br>
     </form>
+
+    <h2 id="round-result"></h2>
 
 
 
