Still haven't figured out how to make the results of the round appear through innerHTML after clicking on the button. I'm trying to make a conditional statement inside a function that will output a text depending on the option that the player selected and the option that the cpu selected.

--- a/index.html
+++ b/index.html
@@ -12,19 +12,22 @@
     <form>
         <h2>Round 1</h2>
         <select id="form">
-            <option value="1">Select an option.</option>
-            <option id="rock" value="2">Rock</option>
-            <option id="paper" value="3">Paper</option>
-            <option id="scissor" value="4">Scissor</option>
+            <option  id="none">Select an option.</option>
+            <option id="rock">Rock</option>
+            <option id="paper">Paper</option>
+            <option id="scissor">Scissor</option>
         </select>
         <p>Your selection: </p> 
         <h4 id="human-selection"></h4>
     <br>
 
-    <input id="input" type="button" value="Click for CPU's move."></input>
+   <!-- <input id="input" type="button" value="Click for CPU's move."></input>
     <p>CPU's selection: </p> 
-    <h4 id="cpu-selection"></h4>
+    <h4 id="cpu-selection"></h4> -->
     <br>
+
+    <input id="button" type="button" value="Click to view results."></input>
+    <h4 id="resultText"></h4>
     </form>
 
     <h2 id="round-result"></h2>
