--- a/index.html
+++ b/index.html
@@ -11,22 +11,25 @@
    
     <form>
         <h2>Round 1</h2>
-        <select id="form">
-            <option  id="none">Select an option.</option>
-            <option id="rock">Rock</option>
-            <option id="paper">Paper</option>
-            <option id="scissor">Scissor</option>
+        <select onclick="cpuMove, console.log(cpuMove)" id="form">
+            <option onclick="popNoSelection()" id="none">Select an option.</option>
+            <option onclick="popRock()" id="rock">Rock</option>
+            <option onclick="popPaper()" id="paper">Paper</option>
+            <option onclick="popScissor()" id="scissor">Scissor</option>
         </select>
         <p>Your selection: </p> 
-        <h4 id="human-selection"></h4>
+        <h4 id="humanSelection"></h4>
     <br>
 
-   <!-- <input id="input" type="button" value="Click for CPU's move."></input>
+   <input onclick = "showCpuMove()", id="input", type="button", value="Click for CPU's move."></input>
     <p>CPU's selection: </p> 
-    <h4 id="cpu-selection"></h4> -->
+    <h4 id="cpu-selection"></h4> 
+    <br>
+    <br>
     <br>
 
-    <input id="button" type="button" value="Click to view results."></input>
+    
+    <input onclick="conditional()", id="button" type="button" value="Click to view results."></input>
     <h4 id="resultText"></h4>
     </form>
 
