Successfully created a sessionStorage.setItem for the game score, although just for the first round. I will create a score that accumulates the data from all rounds.

--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
 
 <button id="nextRound"><a href="./round2.html">Play Next Round</a></button>
 
-<h4 id="scoreA">Player: 1<br>CPU: 0</h4>
+<!--<h4 id="scoreA">Player: 1<br>CPU: 0</h4>
 <h4 id="scoreB">Player: 0<br>CPU: 1</h4>
-<h4 id="scoreC">Player: 0<br>CPU: 0</h4>
+<h4 id="scoreC">Player: 0<br>CPU: 0</h4>-->
+
+<h4 id="cumulScore"></h4>
 
 <!--<h4 id="scoreD">Player: 2<br>CPU: 0</h4>
 <h4 id="scoreE">Player: 0<br>CPU: 2</h4>
