--- a/round2.html
+++ b/round2.html
@@ -60,6 +60,8 @@
 <h4 id="scoreH">Player: 1<br>CPU: 0</h4>
 <h4 id="scoreI">Player: 0<br>CPU: 1</h4>
 
+<h4 id="cumulScore"></h4>
+
 <h1 id="endSeriesPl">You have won the series!</h1>
 <h1 id="endSeriesCpu">You have lost the series against the CPU!</h1>
 
