Somehow the application started to malfunction even though I had solved the issue. It is now fixed again, functioning properly, though with a slightly different method.

--- a/round2.html
+++ b/round2.html
@@ -49,7 +49,7 @@
 
 <button id="nextRound"><a href="./round3.html">Play Next Round</a></button>
 
-<h4 id="scoreA">Player: 1<br>CPU: 0</h4>
+<!--<h4 id="scoreA">Player: 1<br>CPU: 0</h4>
 <h4 id="scoreB">Player: 0<br>CPU: 1</h4>
 <h4 id="scoreC">Player: 0<br>CPU: 0</h4>
 
@@ -58,7 +58,7 @@
 <h4 id="scoreF">Player: 0<br>CPU: 0</h4>
 <h4 id="scoreG">Player: 1<br>CPU: 1</h4>
 <h4 id="scoreH">Player: 1<br>CPU: 0</h4>
-<h4 id="scoreI">Player: 0<br>CPU: 1</h4>
+<h4 id="scoreI">Player: 0<br>CPU: 1</h4>-->
 
 <h4 id="cumulScore"></h4>
 
