successfully transferred session storage from first round js script to the second round's js file. Eliminated a lot of unnecessary code from yesterday, which was the wrong approach anyway. Application working perfectly for rounds one and two. Will start working on round 3 now.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 <h4 id="scoreB">Player: 0<br>CPU: 1</h4>
 <h4 id="scoreC">Player: 0<br>CPU: 0</h4>-->
 
-<h4 id="cumulScore"></h4>
+<h4 id="cumulScoreHum"></h4>
+<h4 id="cumulScoreCPU"></h4>
 
 
 <script>
