I am beginning to create the conditional for round 3 results, with a total of 27 possible outcomes.

--- a/round2.html
+++ b/round2.html
@@ -6,7 +6,7 @@
         <script src="script2.js" defer></script>
     </head>
 
-<body onload="sessionStorage.getItem('score')">
+<body>
     
    
     <form>
