Round 3 conditional finished. Will soon start to style the webpage with css.

--- a/round3.html
+++ b/round3.html
@@ -35,7 +35,7 @@
     <br>
 
     
-    <input onclick="conditional(), showCpuMove(), showPlayAgain(), showPDiv(), showScore3(), showNextRound()" , 
+    <input onclick="conditional(), showCpuMove(), showPlayAgain(), showPDiv(), showScore3()" , 
     id="button" type="button" value="Click to view results."></input>
     <h4 id="resultText"></h4>
     </form>
@@ -51,8 +51,7 @@
 <h4 id="cumulScoreCPU"></h4>
 
 
-<h1 id="endSeriesPl">You have won the series!</h1>
-<h1 id="endSeriesCpu">You have lost the series against the CPU!</h1>
+<h1 id="announceScore"></h1>
 
 <script>
     
