Continued styling buttons and text within the main three buttons. Process has been slow due to my lack of practice with CSS, but I am learning a lot.

--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
 
     <section>    
             <div class="buttons">
-                <div class="rpsBtn"><button type="button" onclick="popRock(), showButton()" id="rock"><p>Rock</p>
+                <div><button type="button" onclick="popRock(), showButton()" id="rock">
+                    <div class="buttonPBorder"><p>Rock</p></div>
                     <img src="./images/rock48.png", id="rockImg"></button></div>
-                <div class="rpsBtn"><button type="button" onclick="popPaper(), showButton()" id="paper"><p>Paper</p>
-                    <img src="./images/paper.gif", id="paperImg"></button></div>
-                <div class="rpsBtn"><button type="button" onclick="popScissor(), showButton()" id="scissor"><p>Scissor</p>
-                    <img src="./images/scissor.gif", id="scissorImg"></button></div>
+                <div><button type="button" onclick="popPaper(), showButton()" id="paper">
+                    <div class="buttonPBorder"><p>Paper</p></div>
+                    <img src="./images/paper transparent background.gif", id="paperImg"></button></div>
+                <div><button type="button" onclick="popScissor(), showButton()" id="scissor">
+                    <div class="buttonPBorder"><p>Scissor</p></div>
+                    <img src="./images/scissor ransarentak.gif", id="scissorImg"></button></div>
             </div>
             <br>           
             <br>
