Successfully added fade transition to buttonsDiv and header. However, I failed to do the same with the elements that are added with innerHTML from JS and the elements whose visibility is toggled from JS functions. I fixed the problem of contact icons not being clickable.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
 <body>
     <div class="mainDiv"> 
-        <nav>
             <ul id="contactBar">
                 <li id="liP">Contact Me</li>
                 <li id="github"><a href="https://github.com/tmaldonado98", 
@@ -27,7 +26,6 @@
                     target="blank"><img src="../../general icons/instagram icon.png"> 
                     </a></li>                    
             </ul>
-        </nav> 
                                 
         <div class="cumulScoreBox">
             <h4 id="cumulScoreHum"></h4>
@@ -51,12 +49,12 @@
 
         <section>    
                 <div class="buttonsDiv">
-                    <button type="button" onclick="popRock(), showButton()" id="rock">
-                        <img src="./images/rock48.png", id="rockImg"></button>
-                    <button type="button" onclick="popPaper(), showButton()" id="paper">
-                        <img src="./images/paper transparent background.gif", id="paperImg"></button>
-                    <button type="button" onclick="popScissor(), showButton()" id="scissor">
-                    <img src="./images/scissor ransarentak.gif", id="scissorImg"></button>
+                    <button type="button" onclick="popRock()" class="rock">
+                        <img src="./images/rock48.png", class="rockImg"></button>
+                    <button type="button" onclick="popPaper()" class="paper">
+                        <img src="./images/paper transparent background.gif", class="paperImg"></button>
+                    <button type="button" onclick="popScissor()" class="scissor">
+                    <img src="./images/scissor ransarentak.gif", class="scissorImg"></button>
                 </div>
                 <br>        
                 <br>
