Making changes to relative links for images, because the images outside of the project folder don't show up on github.

--- a/round3.html
+++ b/round3.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./scss/main3.css">
         <script src="script3.js" defer></script>
-        <link rel="icon" href="../../general icons/monkey icon.png">
+        <link rel="icon" href="/home/tomas/repository/general icons/monkey icon.png">
     </head>
 
 <body>
@@ -16,13 +16,13 @@
             <ul id="contactBar">
                 <li id="liP">Contact Me</li>
                 <li id="github"><a href="https://github.com/tmaldonado98", 
-                    target="blank"><img src="../../general icons/github icon.png">
+                    target="blank"><img src="/home/tomas/repository/general icons/github icon.png">
                     </a></li>
                 <li id="email"><a href="mailto: tmaldonadotrs@gmail.com",
-                    target="blank"><img src="../../general icons/mail icon.png"> 
+                    target="blank"><img src="/home/tomas/repository/general icons/mail icon.png"> 
                     </a></li>
                 <li id="ig"><a href="https://www.instagram.com/tomas.m.98/",
-                    target="blank"><img src="../../general icons/instagram icon.png"> 
+                    target="blank"><img src="/home/tomas/repository/general icons/instagram icon.png"> 
                     </a></li>                    
             </ul>
                                 
