Still making changes.

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <ul id="contactBar">
                 <li id="liP">Contact Me</li>
                 <li id="github"><a href="https://github.com/tmaldonado98", 
-                    target="blank"><img src="/home/tomas/repository/general icons/github icon.png">
+                    target="blank"><img src="./images/github icon.png">
                     </a></li>
                 <li id="email"><a href="mailto: tmaldonadotrs@gmail.com",
-                    target="blank"><img src="/home/tomas/repository/general icons/mail icon.png"> 
+                    target="blank"><img src="./images/mail icon.png"> 
                     </a></li>
                 <li id="ig"><a href="https://www.instagram.com/tomas.m.98/",
-                    target="blank"><img src="/home/tomas/repository/general icons/instagram icon.png"> 
+                    target="blank"><img src="./images/instagram icon.png"> 
                     </a></li>                    
             </ul>
                                 
