removed ig button. Made next round and start over links inaccessible before getting round results.

--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
                     </a></li>
                 <li id="email"><a href="mailto: tmaldonadotrs@gmail.com",
                     target="blank"><img src="./images/mail icon.png"> 
-                    </a></li>
-                <li id="ig"><a href="https://www.instagram.com/tomas.m.98/",
-                    target="blank"><img src="./images/instagram icon.png"> 
-                    </a></li>                    
+                    </a></li>                
             </ul>
                                 
         <div class="cumulScoreBox">
@@ -81,7 +78,7 @@
             <input onclick="conditional(), showCpuMove(), showPDiv(), showScore1(), showNextRound(), showPlayAgain()" , 
             id="resultButton" type="button" value="Click To View Results">
             <button id="playAgain" onclick="history.go(0)">Start Over</button>
-            <a href="./round2.html"><button id="nextRound">Play Next Round</button></a>
+            <button id="nextRound"><a href="./round2.html">Play Next Round</a></button>
         </div>
     </div>
 </main>
