--- a/round3.html
+++ b/round3.html
@@ -20,10 +20,7 @@
                 </a></li>
             <li id="email"><a href="mailto: tmaldonadotrs@gmail.com",
                 target="blank"><img src="./images/mail icon.png"> 
-                </a></li>
-            <li id="ig"><a href="https://www.instagram.com/tomas.m.98/",
-                target="blank"><img src="./images/instagram icon.png"> 
-                </a></li>                    
+                </a></li>                   
         </ul>
                                 
         <div class="cumulScoreBox">
@@ -81,7 +78,7 @@
             <input onclick="conditional(), showCpuMove(), showPDiv(), showScore3(), showPlayAgain()" , 
             id="resultButton" type="button" value="Click To View Results">
             
-            <a href="./index.html"><button id="playAgain" >Start Over</button></a>
+            <button id="playAgain"><a href="./index.html">Start Over</a></button>
         </div>
     </div>
 </main>
