--- a/round2.html
+++ b/round2.html
@@ -20,9 +20,6 @@
                 </a></li>
             <li id="email"><a href="mailto: tmaldonadotrs@gmail.com",
                 target="blank"><img src="./images/mail icon.png"> 
-                </a></li>
-            <li id="ig"><a href="https://www.instagram.com/tomas.m.98/",
-                target="blank"><img src="./images/instagram icon.png"> 
                 </a></li>                    
         </ul>
                                 
@@ -81,8 +78,8 @@
         <div class="smallBtnsDiv">
             <input onclick="conditional(), showCpuMove(), showPDiv(), showScore2(), showNextRound(), showPlayAgain()" , 
             id="resultButton" type="button" value="Click To View Results">
-            <a href="./index.html"><button id="playAgain" >Start Over</button></a>
-            <a href="./round3.html"><button id="nextRound">Play Next Round</button></a>
+            <button id="playAgain" ><a href="./index.html">Start Over</a></button>
+            <button id="nextRound"><a href="./round3.html">Play Next Round</a></button>
         </div>
     </div>
 </main>
